Revert "edit bio"
This reverts commit 3daaaf573e504b42182f6f436e8fc1709e414758.

--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ analytics:
 author:
   name             : "Noah Pivnick"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "MPS Candidate, Interactive Telecommunications Program at NYU Tisch School of the Arts."
+  bio              : "MPS Candidate, 2020, Interactive Telecommunications Program at NYU Tisch School of the Arts."
   location         : "New York, NY"
   email            : nopivnick@nyu.edu
   links:
