added category links to navigation bar

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,6 +4,10 @@ main:
   #   url: /about/
   - title: "Categories"
     url: /categories/
+  - title: "ICM"
+    url: /categories/icm/
+  - title: "PhysComp"
+    url: /categories/physcomp/
   # - title: "Projects"
   #   url: /projects/
   # - title: "Sample Posts"
