--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "nnp @ itp"
+title                    : "nnp @ ITP"
 title_separator          : "-"
 name                     : "Noah Pivnick"
 description              : "An amazing website."
