added Fab category to navigation

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,6 +4,8 @@ main:
   #   url: /about/
   - title: "Categories"
     url: /categories/
+  - title: "Fab"
+    url: /categories/fab/
   - title: "ICM"
     url: /categories/icm/
   - title: "PhysComp"
