categories for new classes

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,16 +2,22 @@
 main:
   # - title: "About"
   #   url: /about/
-  - title: "Categories"
-    url: /categories/
-  - title: "Fab"
-    url: /categories/fab/
-  - title: "Haptics"
-    url: /categories/haptics/
-  - title: "ICM"
-    url: /categories/icm/
-  - title: "PhysComp"
-    url: /categories/physcomp/
+  - title: "Collective"
+    url: /categories/collective/
+  - title: "Playful"
+    url: /categories/playful/
+  - title: "Tangible"
+    url: /categories/tangible/
+  - title: "Wearables"
+    url: /categories/wearables/
+  # - title: "Fab"
+  #   url: /categories/fab/
+  # - title: "Haptics"
+  #   url: /categories/haptics/
+  # - title: "ICM"
+  #   url: /categories/icm/
+  # - title: "PhysComp"
+    # url: /categories/physcomp/
   # - title: "Projects"
   #   url: /projects/
   # - title: "Sample Posts"
