--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -23,23 +23,53 @@ main:
   # - title: "ICM"
   #   url: /categories/icm/
   # - title: "PhysComp"
-  # url: /categories/physcomp/
+  #   url: /categories/physcomp/
   #
   # 2019 - Spring
   #
-  - title: "Categories"
-    url: /categories/
-  - title: "Collective"
-    url: /categories/collective/
-  - title: "Fungus"
-    url: /categories/fungus/
-  - title: "Meaningful"
-    url: /categories/meaningful/
-  - title: "Paper"
-    url: /categories/paper/
-  - title: "Playful"
-    url: /categories/playful/
+  # - title: "Categories"
+  #  url: /categories/
+  # - title: "Collective"
+  #  url: /categories/collective/
+  # - title: "Fungus"
+  #  url: /categories/fungus/
+  # - title: "Meaningful"
+  #  url: /categories/meaningful/
+  # - title: "Paper"
+  #  url: /categories/paper/
+  # - title: "Playful"
+  #  url: /categories/playful/
   # - title: "Tangible"
   #   url: /categories/tangible/
-  - title: "Wearables"
-    url: /categories/wearables/
+  # - title: "Wearables"
+  #   url: /categories/wearables/
+  #
+  # 2019 - Fall
+  #
+  - title: "Categories"
+    url: /categories/
+    description: "All categories"
+  - title: "Discomfort"
+    url: /categories/discomfort/
+    description: "Design For Discomfort"
+  - title: "Electronics"
+    url: /categories/electronics/
+    description: "Electronics for Inventors"
+  - title: "Game Design"
+    url: /categories/game-design/
+    description: "Game Design and the Psychology of Choice"
+  - title: "Masquerade"
+    url: /categories/masquerade/
+    description: "Masquerade"
+  - title: "Media Devices"
+    url: /categories/media-devices/
+    description: "Making Media Making Devices"
+  - title: "Narrative"
+    url: /categories/narrative/
+    description: "Computational Approaches to Narrative"
+  - title: "Textile"
+    url: /categories/textile/
+    description: "Textile Interfaces"
+  - title: "Understanding"
+    url: /categories/understanding/
+    description: "Understanding Networks"
