--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -67,9 +67,6 @@ main:
   #
   # 2020 - Spring
   #
-  - title: "Categories"
-    url: /categories/
-    description: "All categories"
   - title: "Cabinets"
     url: /categories/cabinets/
     description: "Cabinets of Wonder"
@@ -79,3 +76,6 @@ main:
   - title: "Thesis"
     url: /categories/thesis/
     description: "Thesis"
+  - title: "All Other Categories"
+    url: /categories/
+    description: "All categories"
